@@ -1,4 +1,4 @@
-import org.junit.jupiter.api.Test;
+import org.chdb.jdbc.memory.ArrowMemoryManger;
 
 import java.sql.Connection;
 import java.sql.DriverManager;
@@ -7,8 +7,10 @@ import java.sql.Statement;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class ChdbJdbcTest {
+public class ChdbJdbcTest  {
 
+  // TODO failed to run by junit, it will crash
+  // Note: adding --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
   public static void main(String[] args) throws Exception {
     // Load the JDBC driver
     Class.forName("org.chdb.jdbc.ChdbDriver");
@@ -31,5 +33,6 @@ public class ChdbJdbcTest {
     rs.close();
     conn.close();
 
+    assertEquals(0, ArrowMemoryManger.ROOT_ALLOCATOR.getAllocatedMemory());
   }
 }
